@@ -11,8 +11,8 @@ except ImportError:
 from trytond.config import config
 
 __all__ = [
-    'name', 'Database', 'TableHandler',
-    'DatabaseIntegrityError', 'DatabaseDataError', 'DatabaseOperationalError']
+    'name', 'Database', 'DatabaseIntegrityError',
+    'DatabaseOperationalError', 'DatabaseTimeoutError', 'TableHandler']
 
 
 name = urllib.parse.urlparse(config.get('database', 'uri', default='')).scheme
@@ -36,4 +36,5 @@ Database = _module.Database
 DatabaseIntegrityError = _module.DatabaseIntegrityError
 DatabaseDataError = _module.DatabaseDataError
 DatabaseOperationalError = _module.DatabaseOperationalError
+DatabaseTimeoutError = _module.DatabaseTimeoutError
 TableHandler = _module.TableHandler
