@@ -13,8 +13,8 @@ from threading import RLock
 
 from psycopg2 import Binary, connect
 from psycopg2.extensions import (
-    ISOLATION_LEVEL_REPEATABLE_READ, UNICODE, AsIs, cursor, register_adapter,
-    register_type)
+    ISOLATION_LEVEL_REPEATABLE_READ, ISOLATION_LEVEL_AUTOCOMMIT, UNICODE, AsIs,
+    cursor, register_adapter, register_type)
 from psycopg2.pool import PoolError, ThreadedConnectionPool
 from psycopg2.sql import SQL, Identifier
 
@@ -26,6 +26,7 @@ from psycopg2 import DataError as DatabaseDataError
 from psycopg2 import IntegrityError as DatabaseIntegrityError
 from psycopg2 import OperationalError as DatabaseOperationalError
 from psycopg2 import ProgrammingError
+from psycopg2.errors import QueryCanceled as DatabaseTimeoutError
 from psycopg2.extras import register_default_json, register_default_jsonb
 from sql import Cast, Flavor, For, Table
 from sql.conditionals import Coalesce
@@ -38,7 +39,8 @@ from trytond.tools.gevent import is_gevent_monkey_patched
 
 __all__ = [
     'Database',
-    'DatabaseIntegrityError', 'DatabaseDataError', 'DatabaseOperationalError']
+    'DatabaseIntegrityError', 'DatabaseDataError', 'DatabaseOperationalError',
+    'DatabaseTimeoutError']
 
 logger = logging.getLogger(__name__)
 
@@ -251,7 +253,8 @@ class Database(DatabaseInterface):
     def connect(self):
         return self
 
-    def get_connection(self, autocommit=False, readonly=False):
+    def get_connection(
+            self, autocommit=False, readonly=False, statement_timeout=None):
         for count in range(config.getint('database', 'retry'), -1, -1):
             try:
                 conn = self._connpool.getconn()
@@ -266,10 +269,25 @@ class Database(DatabaseInterface):
                 logger.error(
                     'connection to "%s" failed', self.name, exc_info=True)
                 raise
-        conn.set_session(
-            isolation_level=ISOLATION_LEVEL_REPEATABLE_READ,
-            readonly=readonly,
-            autocommit=autocommit)
+        # We do not use set_session because psycopg2 < 2.7 and psycopg2cffi
+        # change the default_transaction_* attributes which breaks external
+        # pooling at the transaction level.
+        if autocommit:
+            conn.set_isolation_level(ISOLATION_LEVEL_AUTOCOMMIT)
+        else:
+            conn.set_isolation_level(ISOLATION_LEVEL_REPEATABLE_READ)
+        statements = []
+        # psycopg2cffi does not have the readonly property
+        if hasattr(conn, 'readonly'):
+            conn.readonly = readonly
+        elif not autocommit and readonly:
+            statements.append('SET TRANSACTION READ ONLY')
+        if statement_timeout:
+            statements.append(
+                'SET LOCAL statement_timeout=%s' % (statement_timeout * 1000))
+        if statements:
+            cursor = conn.cursor()
+            cursor.execute(';'.join(statements))
         return conn
 
     def put_connection(self, connection, close=False):
