@@ -17,8 +17,8 @@ from werkzeug.wrappers import Response
 from trytond import __version__, backend, security
 from trytond.config import config, get_hostname
 from trytond.exceptions import (
-    ConcurrencyException, LoginException, RateLimitException, UserError,
-    UserWarning)
+    ConcurrencyException, LoginException, RateLimitException, TimeoutException,
+    UserError, UserWarning)
 from trytond.tools import is_instance_method
 from trytond.transaction import Transaction
 from trytond.worker import run_task
@@ -170,7 +170,7 @@ def _dispatch(request, pool, *args, **kwargs):
         if count != retry:
             time.sleep(0.02 * (retry - count))
         with Transaction().start(pool.database_name, user,
-                readonly=rpc.readonly) as transaction:
+                readonly=rpc.readonly, timeout=rpc.timeout) as transaction:
             try:
                 c_args, c_kwargs, transaction.context, transaction.timestamp \
                     = rpc.convert(obj, *args, **kwargs)
@@ -187,6 +187,9 @@ def _dispatch(request, pool, *args, **kwargs):
                     else:
                         result = [rpc.result(meth(i, *c_args, **c_kwargs))
                             for i in inst]
+            except backend.DatabaseTimeoutError as exception:
+                logger.debug(log_message, *log_args, exc_info=True)
+                raise TimeoutException from exception
             except backend.DatabaseOperationalError:
                 if count and not rpc.readonly:
                     transaction.rollback()
