@@ -1,3 +1,4 @@
+* Add database timeout parameter on RPC calls
 * Combine search and get_keys in DictSchemaMixin
 
 Version 6.4.3 - 2022-07-01
